# mortimer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  makefile
assets/: README.md
cmake/: add_shader_module.cmake  target_add_binary_embed.cmake
src/: envlight.c  envlight.h  imgui_renderer.c  imgui_renderer.h  loader.c  loader.h  log.h  main.c  maths.h  renderer.c  renderer.h  scene.c  scene.h  trimesh.c  trimesh.h  types.h
src/embed/: .gitignore
src/embed/FiraCode/: FiraCode-Regular.c  FiraCode-Regular.h
src/embed/blue_noise/: LICENCE
src/shaders/: .gitignore  accumulate.frag  first_bounce.frag  first_bounce.vert  pathtrace.frag  present.frag  present.vert  triangle.frag  triangle.vert
src/shaders/common/: constants.glsl  random.glsl
visualizer/: package-lock.json  package.json
visualizer/src/components/: surface.tsx
visualizer/src/scenes/: example.tsx
